[project]
name = "bentoml-vllm-llm"
version = "0.1.0"
requires-python = "==3.12.7"
dependencies = [
    "accelerate==1.2.0",
    "bentoml>=1.3.19",
    "fastapi==0.115.6",
    "openai==1.57.0",
    "python-dotenv==1.0.1",
    "typing_extensions~=4.12.2",
    "pydantic~=2.10.3",
    "wheel>=0.45.1",
    "torch>=2.5.1",
    "vllm==0.6.4",
    "numpy>=1.26.4",
]

[tool.bentoml.build]
service = "service:VLLM"
description = "OpenAI compatible LLM API"
include = ["*.py"]

[tool.bentoml.build.labels]
owner = "Yanick-Schraner"
stage = "production"
